# kdscript

make/: README.md
make/autotools/: cross_lrzsz.sh
make/cmake/cmake-makefile-wrapper/: CMakeLists.txt  README.md
make/cmake/cross-compile/: CMakeLists.txt  Makefile
make/cmake/cross-compile/src/: test.c
make/cmake/demo/openssl/rsa/: CMakeLists.txt  file.h  rsa_dgst.c
make/cmake/msys2/opencv/: CMakeLists.txt
make/gmake/c-add-cpp-mix/: Makefile  another.mk
make/gmake/platform/: Makefile
make/ndk/hello-world/: .gitignore  README.md
shell/: README.md
shell/ascii/: ascii.sh
shell/check-return/: check-int-function-return.sh  oneline.sh  return-result.sh
shell/control-in-one-line/: if-else  while-loop
shell/download/: dl-from-youku.sh
shell/function/: debugger.sh  lib.sh  recursive-function.sh  return-code-and-string.sh  return-to-file.sh  write-to-stdout.sh
shell/getopt/: getopts-2.sh  getopts.sh
shell/platform/: check-bash.sh  select_platform.sh
shell/useful/: add-suffix.sh  curdir.sh  ionice-test.sh  rm-same.sh  showcmd.sh  showdisksize.sh  stderr-to-stdout.sh
utils/benchmark/Phoronix-Test-Suite/: url
utils/benchmark/fio/: cmd  url
utils/benchmark/fxmark/: url
utils/benchmark/lmbench/: url
utils/benchmark/tiobench/: url
utils/benchmark/xfstests/: url
utils/code/ctags/: ctags.sh
utils/debug/adb/: url.txt
utils/debug/lsof/: lsof.sh
utils/debug/sanitizers/: url
utils/debug/valgrind/: Makefile  run.sh  test.c
utils/debug/vmtouch/: url
utils/emu/qemu/: url
utils/opengl/: run.sh
windows/: README.md
windows/ahk/: MinimizeAll.ahk  RemoteKeys-mac.md  RemoteKeys.md  click-wait.ahk  click.ahk  cygwin.ahk  htpc.ahk  mbtnF5.ahk  mouse.ahk
windows/bat/: README.md
windows/ps1/: Priority-Affinity.cmd
windows/reg/: disable_winL.bat  gvim.reg  notepad++.reg  notepad.reg  runas.reg  usbdriver.bat
windows/vbs/: StartMenu.vbs
(+110 files in other folders)
